--- a/package.json
+++ b/package.json
@@ -6,51 +6,50 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "preinstall": "npx npm-force-resolutions"
-  },
-  "resolutions": {
-    "glob": "10.3.15"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.15",
-    "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
-    "@headlessui/react": "^2.1.2",
-    "@heroicons/react": "^2.1.5",
-    "@reduxjs/toolkit": "^2.2.6",
-    "@vercel/speed-insights": "^1.0.12",
-    "accept-language": "^3.0.18",
-    "axios": "^1.7.7",
+    "@fullcalendar/core": "^6.1.18",
+    "@fullcalendar/daygrid": "^6.1.18",
+    "@fullcalendar/interaction": "^6.1.18",
+    "@fullcalendar/react": "^6.1.18",
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@vercel/speed-insights": "^1.2.0",
+    "accept-language": "^3.0.20",
+    "axios": "^1.11.0",
     "classnames": "^2.5.1",
-    "date-fns": "^3.6.0",
-    "framer-motion": "^11.3.19",
-    "i18next": "^23.12.2",
-    "i18next-browser-languagedetector": "^8.0.0",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.18.2",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^8.2.0",
     "i18next-resources-to-backend": "^1.2.1",
-    "jose": "^5.6.3",
-    "next": "^14.2.13",
+    "jose": "^5.10.0",
+    "next": "^15.4.5",
     "next-pwa": "^5.6.0",
     "npm-force-resolutions": "^0.0.10",
     "react": "^18",
     "react-component-tailwindcss": "^0.0.3-a.18",
-    "react-cookie": "^7.2.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18",
-    "react-i18next": "^15.0.0",
-    "react-redux": "^9.1.2",
-    "sass": "^1.77.8"
+    "react-i18next": "^15.6.1",
+    "react-redux": "^9.2.0",
+    "sass": "^1.89.2",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-redux": "^7.1.33",
-    "eslint": "^8",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^24.1.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@types/react-redux": "^7.1.34",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": "20.14.0"
