--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^15.4.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2"
